--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Triqui</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
         <a href=""><span><img src="https://img.icons8.com/ios-filled/50/000000/facebook-new.png"/></span>Facebook</a>
         <a href=""><span><img src="https://img.icons8.com/ios-filled/50/000000/linkedin-circled--v1.png"/></span>Linkedin</a>
     </footer>
-    <script src="/triqui.js"></script>
+    <script src="./triqui.js"></script>
 </body>
 </html>
