se agrega eleccion del pc en las casillas con aleatoriedad

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
         <p>Elije</p>
         <div class="opciones-a-elegir">
-            <input type="button" value="X" onclick="eleccionJudador(event,'x')" class="input_x">
-            <input type="button" value="O" onclick="eleccionJudador(event,'o')" class="inputs_o">
+            <input type="button" value="X" onclick="eleccionJudador(event,'x')" id="input_x">
+            <input type="button" value="O" onclick="eleccionJudador(event,'o')" id="input_o">
         </div>
         <input class="input_tabla" type="button" value="iniciar Juego" onclick=" genera_tabla()">
     </main>
