--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <input class="input_tabla" type="button" value="iniciar Juego" onclick=" genera_tabla()">
     </main>
     <div class="button_reiniciar">
-        <button type="reset">reiniciar</button>
+        <button type="reset">Reiniciar</button>
     </div>
     <footer>
-        <a href=""><span><img src="https://img.icons8.com/ios-filled/50/000000/facebook-new.png"/></span>Facebook</a>
         <a href=""><span><img src="https://img.icons8.com/ios-filled/50/000000/linkedin-circled--v1.png"/></span>Linkedin</a>
     </footer>
     <script src="./triqui.js"></script>
