--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         </div>
         <input class="input_tabla" type="button" value="iniciar Juego" onclick=" genera_tabla()">
     </main>
+    <div id="resultado" ></div>
     <div class="button_reiniciar">
-        <button type="reset">Reiniciar</button>
+        <button type="reset" onclick="reiniciarJuego()">Reiniciar</button>
     </div>
     <footer>
-        <a href=""><span><img src="https://img.icons8.com/ios-filled/50/000000/linkedin-circled--v1.png"/></span>Linkedin</a>
+        <a href="https://github.com/JeffersonPorras/JuegoDeTriqui"><span><img src="https://img.icons8.com/ios-filled/50/ffffff/linkedin-circled--v1.png"/></span>Linkedin</a>
     </footer>
     <script src="./triqui.js"></script>
 </body>
